8""""8                  
8    8 e   e eeeee eeeee
8eeee8 8   8   8   8  88
88   8 8e  8   8e  8   8
88   8 88  8   88  8   8
88   8 88ee8   88  8eee8

          3.0


The future of IRC bots is here! Xelhua gives to you, Auto 3.0, a new version of
the popular Auto IRC bot.

In this alpha10 release, we have added:

* German translation for AUR command help.
* German translation for Bitly command help.
* German translation for Calc command help.
* German translation for Dictionary command help.

Bug fixes:

None

Incompatibilities:

None

We thank you for choosing Auto. Please remember that he is coming to late
development stages soon, and testers are needed! But we hope we've piqued
your interest, as Auto's upcoming module repository will allow modules to be
created by anyone and uploaded there for everyone to use.

Auto's goal is to create an efficient, stable and highly customizable IRC bot
in Perl. To offer an alternative to other platforms.

Enjoy Auto 3.0.0 Alpha 10!