@@ -17,6 +17,10 @@ In this alpha10 release, we have added:
 * German translation for Bitly command help.
 * German translation for Calc command help.
 * German translation for Dictionary command help.
+* German translation for EightBall command help.
+* German translation for Eval command help.
+* German translation for FML command help.
+* German translation for Greet command help.
 
 Bug fixes:
 
